fix server run